# Kinder_Garden_AI

./: .example.env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: chat.py
backend/config/: model.yaml
backend/prompts/: dummycode.json
backend/routes/: upload.py
backend/services/: image_service.py  speech_service.py  text_service.py
backend/utils/: cloud_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/app-shell/: Chat.tsx  ChatInput.tsx  ChatShell.tsx  CodeDrawer.tsx  EmptyState.tsx  LoadingState.tsx  Message.tsx  Sidebar.tsx  TopBar.tsx
frontend/components/ui/: avatar.tsx  badge.tsx  button.tsx  select.tsx  separator.tsx
