[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o-genrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs==0.2.27",
    "fastapi[standard]>=0.138.2",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "pillow>=12.3.0",
    "uvicorn>=0.24.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
